--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -21,4 +21,4 @@ jobs:
         ngroktoken: ${{ secrets.NGROK_AUTH_TOKEN }}
       run: |
         ./ngrok authtoken $ngroktoken
-        ./ngrok tcp 3389 & ./ngrok tcp 22
+        ./ngrok tcp 3389
